--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,15 @@
+// Reset CSS
+@import 'sanitize';
+
 body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
 }
 
+h1 {
+	margin-top: 0;
+}
+
 @import 'app';
+@import 'color-picker';
