--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,6 @@
 // Reset CSS
 @import 'sanitize';
+$arrow: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10px' height='7px' viewBox='0 0 20 14'%3E%3Cpolygon fill='%23888' points='20 0 10 13.2617233 0 0'%3E%3C/polygon%3E%3C/svg%3E";
 
 body {
 	margin: 0;
@@ -10,32 +11,6 @@ body {
 h1 {
 	margin-top: 0;
 	font-size: 1.4rem;
-}
-
-button {
-	display: inline-block;
-	-webkit-appearance: none;
-	appearance: none;
-	border: none;
-	padding: 7px;
-	font-size: 14px;
-	line-height: 1;
-
-	span {
-		vertical-align: middle;
-	}
-
-	.gridicon {
-		top: 5px;
-	}
-
-	.gridicons-plus-small {
-		margin-left: -4px;
-	}
-}
-
-input {
-	// border: 1px solid #444;
 }
 
 @import 'app';
