Switch the drop icon color on light backgrounds

--- a/src/scss/_color-picker.scss
+++ b/src/scss/_color-picker.scss
@@ -16,6 +16,16 @@
 
 	.button-drop {
 		color: white;
+
+		&.is-light-bg {
+			color: rgba( #222, 0.7 );
+		}
+
+		&:not(.is-light-bg) .gridicon  {
+			$shadow: 0 0 1px rgba( 0, 0, 0, 0.5 );
+			-webkit-filter: drop-shadow( $shadow );
+			        filter: drop-shadow( $shadow );
+		}
 	}
 }
 
