Remove any border radius from buttons

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -95,6 +95,7 @@ button {
 	text-transform: uppercase;
 	background: #F4F4F5;
 	border: 1px solid #ccc;
+	border-radius: 0;
 
 	span {
 		display: inline-block;
