--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -14,7 +14,7 @@
 	}
 
 	.form-upper {
-		padding-top: 60px;
+		padding-top: 80px;
 	}
 
 	.form-lower {
@@ -22,6 +22,7 @@
 	}
 
 	.flag {
+		margin-top: 20px;
 		max-width: 100%;
 		height: auto;
 		grid-column: 2;
