--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,11 +6,13 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
+	line-height: 1.5;
 }
 
 h1 {
 	margin-top: 0;
 	font-size: 1.4rem;
+	line-height: 1.3;
 }
 
 button, select {
@@ -18,4 +20,5 @@ button, select {
 }
 
 @import 'app';
+@import 'skeleton';
 @import 'color-picker';
