--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -21,12 +21,13 @@
 		padding: 20px 0 60px;
 	}
 
-	.flag {
+	.flag-container {
 		margin-top: 20px;
 		max-width: 100%;
 		height: auto;
 		grid-column: 2;
 		grid-row: 1 / span 2;
+		text-align: center;
 	}
 
 	.credits {
@@ -55,7 +56,7 @@
 			grid-row: 1;
 			min-width: 150px;
 		}
-		.flag {
+		.flag-container {
 			grid-row: 1;
 			align-self: center;
 		}
@@ -70,7 +71,7 @@
 		.form-upper {
 			grid-row: 1;
 		}
-		.flag {
+		.flag-container {
 			grid-column: 1;
 			grid-row: 2;
 		}
@@ -91,7 +92,8 @@
 	}
 }
 
-button {
+button,
+.button {
 	display: inline-block;
 	-webkit-appearance: none;
 	appearance: none;
@@ -99,9 +101,11 @@ button {
 	font-size: 14px;
 	line-height: 1;
 	text-transform: uppercase;
+	text-decoration: none;
 	background: #F4F4F5;
 	border: 1px solid #ccc;
 	border-radius: 0;
+	color: currentColor;
 
 	span {
 		display: inline-block;
