--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -3,7 +3,13 @@ html(lang="en")
 	head
 		title= pageTitle
 		meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
+		meta(property="og:url", content="http://flags.deku.ryelletest.space/")
+		meta(property="og:type", content="website")
+		meta(property="og:title", content="WordPress Pride Flag Generator")
+		meta(property="og:description", content="Create & download a custom WordPress pride flag for your queer identity!")
+		meta(property="og:image", content="http://flags.deku.ryelletest.space/static/share.png")
 		link(rel="stylesheet", href=cssFile)
+		link(rel="shortcut icon", type="image/png", href="/static/favicon.png")
 	body
 		#root!= markup
 		script(src=jsFile)
