Update image & add an alt text (which is notably missing from FB’s example documentation 😠)

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -8,6 +8,7 @@ html(lang="en")
 		meta(property="og:title", content="WordPress Pride Flag Generator")
 		meta(property="og:description", content="Create & download a custom WordPress pride flag for your queer identity!")
 		meta(property="og:image", content="http://flags.deku.ryelletest.space/static/share.png")
+		meta(property="og:image:alt", content="An array of a dozen pride flags: Agender, Aromantic, Asexual, Bisexual, Gay (the rainbow), Gay (Philadelphia's more color more pride version with black and brown), Genderfluid, Genderqueer, Nonbinary, Pansexual, Polysexual, and Transgender.")
 		link(rel="stylesheet", href=cssFile)
 		link(rel="shortcut icon", type="image/png", href="/static/favicon.png")
 	body
