--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,24 @@
+body {
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	line-height: 1.5;
+}
+
+h1 {
+	margin-top: 0;
+	font-size: 1.4rem;
+	line-height: 1.3;
+}
+
+button, select {
+	cursor: pointer;
+}
+
+a, button, input, select {
+	outline-color: lighten( #3EA7D5, 20% );
+}
+
 .app {
 	max-width: 830px;
 	padding: 0;
@@ -133,6 +154,8 @@ input,
 select {
 	border: 1px solid #ccc;
 }
+
+$arrow: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10px' height='7px' viewBox='0 0 20 14'%3E%3Cpolygon fill='%23888' points='20 0 10 13.2617233 0 0'%3E%3C/polygon%3E%3C/svg%3E";
 
 select {
 	-webkit-appearance: none;
