--- a/server/views/index.html
+++ b/server/views/index.html
@@ -30,6 +30,6 @@
 		<div id="root">
 			Loading
 		</div>
-		<script src="/index.js"></script>
+		<script src="/static/js/index.js"></script>
 	</body>
 </html>
