Use the sanitize.css from unpkg

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -22,8 +22,7 @@
 			content="An array of a dozen pride flags: Agender, Aromantic, Asexual, Bisexual, Genderfluid, Genderqueer, LGBTQ (the rainbow), LGBTQ (Philadelphia's more color more pride version with black and brown), Nonbinary, Pansexual, Polysexual, and Transgender."
 		/>
 		<link rel="shortcut icon" type="image/png" href="/static/favicon.png" />
-		<!-- <link href="https://unpkg.com/sanitize.css" rel="stylesheet" /> -->
-		<link href="/static/sanitize.css" rel="stylesheet" />
+		<link href="https://unpkg.com/sanitize.css" rel="stylesheet" />
 
 	</head>
 	<body>
